--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ pandas>=2.0.0
 Flask>=2.3.0
 gunicorn>=19.9.0
 numpy>=1.16.2
+openai>=1.12.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+logging>=0.5.1.2
